fixed mobile navigation overflow

--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -23,6 +23,11 @@ img {
 	display: block;
 	width: 100%;
 	height: 100%;
+	-webkit-user-drag: none;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 }
 
 ul {
